--- a/src/css/confirm-message.css
+++ b/src/css/confirm-message.css
@@ -4,6 +4,9 @@
     padding: 40px 45px;
     min-width: 400px;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .confirm-message p {
@@ -24,4 +27,23 @@
     display: flex;
     justify-content: center;
     min-width: 80px;
+}
+
+@media screen and (max-width: 425px) {
+    .confirm-message p {
+        max-width: 405px;
+    }
+}
+
+@media screen and (max-width: 375px) {
+    .confirm-message p {
+        max-width: 355px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .confirm-message p {
+        max-width: 300px;
+        font-size: 16px;
+    }
 }
