--- a/src/css/index.css
+++ b/src/css/index.css
@@ -42,7 +42,7 @@ code {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 1200px;
+  max-width: 1200px;
   margin: auto;
 }
 
@@ -56,7 +56,7 @@ code {
 
 main {
   margin: 44px auto 0;
-  width: 1200px;
+  max-width: 1200px;
   min-height: calc(100vh - 289px);
 }
 
@@ -154,7 +154,6 @@ section {
 
 footer {
   height: 160px;
-  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -204,4 +203,32 @@ footer {
 .mr-5{
   margin-right: 40px;
 }
+@media screen and (max-width: 425px) {
+  main,
+  .header{
+    max-width: 425px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .header-button span {
+    display: none;
+  }
+  .buttons {
+    min-width: 150px;
+    justify-content: flex-end;
+  }
+}
 
+@media screen and (max-width: 375px) {
+  main,
+  .header{
+    max-width: 375px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  main,
+  .header{
+    max-width: 300px;
+  }
+}
