--- a/src/css/restorant-page.css
+++ b/src/css/restorant-page.css
@@ -18,7 +18,7 @@
 
 .products-area {
     margin: 40px 0;
-    width: 1224px;
+    max-width: 1200px;
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
@@ -29,8 +29,9 @@
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.05);
     border-radius: 7px;
     width: 384px;
-    margin: 15px 0;
-    margin-right: 24px;
+    margin: 6px;
+    padding-bottom: 20px;
+    overflow: hidden;
 }
 
 .product-card:hover {
@@ -44,7 +45,7 @@
 
 .product-card-body {
     padding: 24px;
-    padding-bottom: 30px;
+    padding-bottom: 20px;
 }
 
 .product-card-bottom {
@@ -61,6 +62,8 @@
     line-height: 21px;
     color: #8C8C8C;
     opacity: 0.54;
+    overflow: hidden;
+    max-height: 45px;
 }
 
 .composition-holder {
@@ -90,7 +93,7 @@
 }
 
 .product-img {
-    height: 212px;
+    height: 216px;
     width: 384px;
 }
 
@@ -147,3 +150,34 @@
 .product-card-bottom .sum-price {
     margin: 0;
 }
+
+@media screen and (max-width:425px) {
+    .restorant-page-header {
+        flex-wrap: wrap;
+    }
+
+    .product-card-bottom {
+     justify-content: center;
+    }
+
+    .product-img {
+        max-width: 100%;
+        max-height: 169px;
+    }
+
+    .product-card-bottom .sum-price {
+        display: none;
+    }
+}
+
+@media screen and (max-width:320px) {
+
+    .product-card {
+        max-width: 300px;
+    }
+
+    .product-img {
+        max-width: 100%;
+    }
+}
+
