--- a/src/css/shopping-cart.css
+++ b/src/css/shopping-cart.css
@@ -75,3 +75,31 @@
     display: flex;
     justify-content: center;
 }
+
+@media screen and (max-width:425px) {
+    .shopping-cart-box {
+        min-width: 300px;
+    }
+
+    .shopping-cart-background {
+        background: #FFFFFF;
+    }
+
+    .shopping-cart-box p {
+        font-size: 16px;
+    }
+
+    .shopping-cart-footer {
+        flex-wrap: wrap;
+        justify-content: flex-end;
+    }
+
+    .shopping-cart-footer .sum-price {
+        margin: 10px 0;
+    }
+
+    .shopping-cart-prod-right .price,
+    .shopping-cart-prod-right .sum-price {
+        display: none;
+    }
+}
