--- a/src/css/index.css
+++ b/src/css/index.css
@@ -101,8 +101,12 @@ input {
   line-height: 24px;
 }
 
-.input-address {
-  min-width: 690px;
+button:disabled {
+  background-color: #8C8C8C;
+  color: #D9D9D9;
+  border: none;
+  opacity: .6;
+  cursor: not-allowed;
 }
 
 button:focus {
